--- a/css/style.css
+++ b/css/style.css
@@ -240,7 +240,7 @@ nav ul li a {
 /*-----------------------------------------------------------------------------------*/
 
 #header {
-  background: url("../images/kimtablac.jpg") repeat scroll center center / cover;
+  background: url("../images/kimtablac1.jpg") repeat scroll center center / cover;
   height: 100vh;
   width: 100%;
 }
