--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,10 @@
 
 /*
   Author: Kim Tablac
-Hello, Meg meg!
+  Hello, Meg meg!
 */
 
-/* 
+/*  General Styling
 /*-----------------------------------------------------------------------------------*/
 
 body {
@@ -447,7 +447,7 @@ nav ul li a {
 }
 
 /*-----------------------------------------------------------------------------------*/
-/*  Journal
+/*  Highlight
 /*-----------------------------------------------------------------------------------*/
 
 #journal,  #journal-blog {
