--- a/css/responsive.css
+++ b/css/responsive.css
@@ -62,13 +62,13 @@
     max-width: 100%;
     margin-bottom: 0;
   }
-  /* portfolio */
+  /* --- */
   #portfolio .portfolio-list .nav li {
     float: none;
     margin: 20px;
     display: inline-block;
   }
-  /* journal */
+  /* highlight */
   #journal .highlight-block .highlight-info {
     margin-bottom: 30px;
   }
@@ -133,13 +133,13 @@
     max-width: 100%;
     margin-bottom: 0;
   }
-  /* portfolio */
+  /* -- */
   #portfolio .portfolio-list .nav li {
     float: none;
     margin: 20px;
     display: inline-block;
   }
-  /* journal */
+  /* highlight */
   #journal .highlight-block .highlight-info {
     margin-bottom: 30px;
   }
@@ -204,13 +204,13 @@
     max-width: 100%;
     margin-bottom: 0;
   }
-  /* portfolio */
+  /* --- */
   #portfolio .portfolio-list .nav li {
     float: none;
     margin: 10px;
     display: inline-block;
   }
-  /* journal */
+  /* highlight */
   #journal .highlight-block .highlight-info {
     margin-bottom: 30px;
   }
